--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,28 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:padding="16dp"
     tools:context=".MainActivity">
 
 
     <TextView
-        android:text="신장"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/custom_black"
+        android:text="@string/height"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <EditText
+        android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"/>
 
 
     <TextView
+        android:textSize="20sp"
+        android:textStyle="bold"
+        android:textColor="@color/custom_black"
+        android:text="@string/weight"
+        android:layout_marginTop="30dp"
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="체중"/>
+        />
 
 
     <EditText
+        android:layout_marginTop="10dp"
         android:id="@+id/editTextNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -34,6 +45,7 @@
         android:inputType="number"/>
 
     <Button
+        android:layout_marginTop="50dp"
         android:text="확인하기"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
